--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <!-- external frameworks -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
         <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
+        <script type="text/javascript" src="https://d3js.org/d3-interpolate.v1.min.js"></script>
         
         <!-- my code -->
         <script type="text/javascript">
@@ -78,16 +79,18 @@
             const CONTENT_EASE_FN = "cubic";
             const CONTENT_EASE_DURATION_MS = 750;
             const CONTENT_FINAL_OPACITY = 1;
+            const TIME_ZERO = Date.now();
 
             var logo_background_img = document.getElementById('logo_background');
             var logo_background = { offset : null, width : 0, height : 0, centerX : 0, centerY : 0 };
+
             var node_layers_xml = null;
             var node_layers_deque = new Deque();
             var node_layers_ids = [];
+            var node_layers_animating = [];
             var node_layers_visible = false;
             var node_layer_margin = { top : 0, right : 0, bottom : 0, left : 0 };
-
-            var animation_time_zero = Date.now();
+            var node_layers = { max_height : 0, max_width : 0, rows : 0, cols : 0 };
             var node_layer_rotation_degrees = 0;
 
             var svg_parent = document.getElementById('svg_container');
@@ -158,31 +161,35 @@
                 });
             };
 
-            var init_node_layers = function(cb) {
+            var update_node_layers_state = function() {
                 update_logo_background_state();
+                node_layers.max_height = (logo_background.height - (NODE_LAYER_ROWS * (node_layer_margin.top + node_layer_margin.bottom))) / NODE_LAYER_ROWS;
+                node_layers.max_width = node_layers.max_height;
+                node_layers.rows = NODE_LAYER_ROWS;
+                node_layers.cols = (1 / NODE_COL_SQUEEZE_FACTOR) * Math.ceil(logo_background.width / node_layers.max_width);
+            };
+
+            var init_node_layers = function(cb) {
+                update_node_layers_state();
                 $('#node_layers_container').height(logo_background.height);
                 $('#node_layers_container').css("opacity", 0);
-                var node_layer_max_height = (logo_background.height - (NODE_LAYER_ROWS * (node_layer_margin.top + node_layer_margin.bottom))) / NODE_LAYER_ROWS;
-                var node_layer_max_width = node_layer_max_height;
-                var node_layer_rows = NODE_LAYER_ROWS;
-                var node_layer_cols = (1 / NODE_COL_SQUEEZE_FACTOR) * Math.ceil(logo_background.width / node_layer_max_width);
                 /* node layers are added by row */
                 var test_id = null;
-                for (var row_idx = 0; row_idx < node_layer_rows; row_idx++) {
+                for (var row_idx = 0; row_idx < node_layers.rows; row_idx++) {
                     var node_layer_row = [];
-                    for (var col_idx = 0; col_idx < node_layer_cols; col_idx++) {
+                    for (var col_idx = 0; col_idx < node_layers.cols; col_idx++) {
                         var random_svg_node_layer_id = random_svg_node_layer_obj().id;
-                        var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2;
-                        var row_shift = node_layer_max_width / 2;
-                        // build a data model for the offset and size of a node layer
+                        var col_shift = (col_idx % 2) ? 0 : node_layers.max_height / 2;
+                        var row_shift = node_layers.max_width / 2;
+                        // build a data model for the offset and size of each node layer
                         var node_layer_obj = {};
                         node_layer_obj['id'] = 'node-layer-' + Math.guid(); // CSS selectors cannot start with digits cf. http://www.w3.org/TR/CSS21/syndata.html#value-def-identifier
                         node_layer_obj['static'] = true;
                         node_layer_obj['initial_random_rotation'] = Math.floor(Math.random() * 360);
-                        node_layer_obj['top'] = (row_idx * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift) * NODE_ROW_SQUEEZE_FACTOR;
-                        node_layer_obj['left'] = col_idx * NODE_COL_SQUEEZE_FACTOR * (node_layer_max_width + node_layer_margin.left + node_layer_margin.right) - row_shift;
-                        node_layer_obj['width'] = NODE_LAYER_SCALE * node_layer_max_width + node_layer_margin.left + node_layer_margin.right;
-                        node_layer_obj['height'] = NODE_LAYER_SCALE * node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom;
+                        node_layer_obj['top'] = (row_idx * (node_layers.max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift) * NODE_ROW_SQUEEZE_FACTOR;
+                        node_layer_obj['left'] = col_idx * NODE_COL_SQUEEZE_FACTOR * (node_layers.max_width + node_layer_margin.left + node_layer_margin.right) - row_shift;
+                        node_layer_obj['width'] = NODE_LAYER_SCALE * node_layers.max_width + node_layer_margin.left + node_layer_margin.right;
+                        node_layer_obj['height'] = NODE_LAYER_SCALE * node_layers.max_height + node_layer_margin.top + node_layer_margin.bottom;
                         node_layer_row.push(node_layer_obj);
                         // render UI element from data model
                         var layer_id = node_layer_obj['id'];
@@ -215,25 +222,21 @@
 
             var position_node_layers = function(cb) {
                 //console.log(node_layers_deque);
-                update_logo_background_state();
+                update_node_layers_state();
                 $('#node_layers_container').height(logo_background.height);
                 $('#svg_container').css("max-height", num_as_px(logo_background.height));
-                var node_layer_max_height = (logo_background.height - (NODE_LAYER_ROWS * (node_layer_margin.top + node_layer_margin.bottom))) / NODE_LAYER_ROWS;
-                var node_layer_max_width = node_layer_max_height;
-                var node_layer_rows = NODE_LAYER_ROWS;
-                var node_layer_cols = (1 / NODE_COL_SQUEEZE_FACTOR) * Math.ceil(logo_background.width / node_layer_max_width);
-                for (var row_idx = 0; row_idx < node_layer_rows; row_idx++) {
+                for (var row_idx = 0; row_idx < node_layers.rows; row_idx++) {
                     var node_layer_row = node_layers_deque.get(row_idx);
-                    for (var col_idx = 0; col_idx < node_layer_cols; col_idx++) {
+                    for (var col_idx = 0; col_idx < node_layers.cols; col_idx++) {
                         var node_layer_obj = node_layer_row[col_idx];
                         var layer_id = node_layer_obj['id'];
-                        var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2;
-                        var row_shift = node_layer_max_width / 2;
-                        /* update model */
-                        node_layer_obj['top'] = (row_idx * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift) * NODE_ROW_SQUEEZE_FACTOR;
-                        node_layer_obj['left'] = col_idx * NODE_COL_SQUEEZE_FACTOR * (node_layer_max_width + node_layer_margin.left + node_layer_margin.right) - row_shift;
-                        node_layer_obj['width'] = NODE_LAYER_SCALE * node_layer_max_width + node_layer_margin.left + node_layer_margin.right;
-                        node_layer_obj['height'] = NODE_LAYER_SCALE * node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom;
+                        var col_shift = (col_idx % 2) ? 0 : node_layers.max_height / 2;
+                        var row_shift = node_layers.max_width / 2;
+                        /* update per-node layer model */
+                        node_layer_obj['top'] = (row_idx * (node_layers.max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift) * NODE_ROW_SQUEEZE_FACTOR;
+                        node_layer_obj['left'] = col_idx * NODE_COL_SQUEEZE_FACTOR * (node_layers.max_width + node_layer_margin.left + node_layer_margin.right) - row_shift;
+                        node_layer_obj['width'] = NODE_LAYER_SCALE * node_layers.max_width + node_layer_margin.left + node_layer_margin.right;
+                        node_layer_obj['height'] = NODE_LAYER_SCALE * node_layers.max_height + node_layer_margin.top + node_layer_margin.bottom;
                         /* update UI */
                         $('#' + layer_id).css("width", num_as_px(node_layer_obj['width']));
                         $('#' + layer_id).css("height", num_as_px(node_layer_obj['height']));
@@ -246,26 +249,22 @@
 
             var animate_random_node_layers = function(n) {
                 if (node_layers_visible) {
-                    update_logo_background_state();
-                    var node_layer_max_height = (logo_background.height - (NODE_LAYER_ROWS * (node_layer_margin.top + node_layer_margin.bottom))) / NODE_LAYER_ROWS;
-                    var node_layer_max_width = node_layer_max_height;
-                    var node_layer_rows = NODE_LAYER_ROWS;
-                    var node_layer_cols = (1 / NODE_COL_SQUEEZE_FACTOR) * Math.ceil(logo_background.width / node_layer_max_width);
+                    update_node_layers_state();
                     for (var node_idx = 0; node_idx < n; node_idx++) {
                         var random_node_layer_id = node_layers_ids[Math.floor(Math.random() * node_layers_ids.length)];
-                        //console.log("animating:", random_node_layer_id);
-                        for (var row_idx = 0; row_idx < node_layer_rows; row_idx++) {
-                            var node_layer_row = node_layers_deque.get(row_idx);
-                            for (var col_idx = 0; col_idx < node_layer_cols; col_idx++) {
-                                var node_layer_obj = node_layer_row[col_idx];
-                                var layer_id = node_layer_obj['id'];
-                                if (layer_id == random_node_layer_id) {
-                                    node_layer_obj['static'] = false;
-                                    d3.select("#" + layer_id)
-                                        .selectAll('.node_layer_transform')
-                                        .attr("class", "node_layer_transform rotating")
-                                        .attr("initial_random_rotation", node_layer_obj['initial_random_rotation']);
-                                }
+                        node_layers_animating.push(random_node_layer_id);
+                    }
+                    for (var row_idx = 0; row_idx < node_layers.rows; row_idx++) {
+                        var node_layer_row = node_layers_deque.get(row_idx);
+                        for (var col_idx = 0; col_idx < node_layers.cols; col_idx++) {
+                            var node_layer_obj = node_layer_row[col_idx];
+                            var layer_id = node_layer_obj['id'];
+                            if (node_layers_animating.indexOf(layer_id) != -1) {
+                                node_layer_obj['static'] = false;
+                                d3.select("#" + layer_id)
+                                    .selectAll('.node_layer_transform')
+                                    .attr("class", "node_layer_transform rotating")
+                                    .attr("initial_random_rotation", node_layer_obj['initial_random_rotation']);
                             }
                         }
                     }
@@ -295,6 +294,18 @@
                     trigger_window_resize();
                     init_node_layers( function() { animate_random_node_layers(42); } );
                 });
+                if (logo_background_img.complete) {
+                    logo_background_img_loaded();
+                } else {
+                    logo_background_img.addEventListener('load', logo_background_img_loaded);
+                }
+                d3.timer(function() {
+                    var delta = (Date.now() - TIME_ZERO);
+                    node_layer_rotation_degrees = (delta / NODE_LAYER_SLOWDOWN_FACTOR) % 360;
+                    update_node_layer_rotation();
+                    //return (delta > 10000);
+                    return false;
+                });
             });
 
             window.addEventListener("resize", function() {
@@ -306,26 +317,6 @@
                     position_node_layers();
                 }, 200);
             });
-
-            if (logo_background_img.complete) {
-                logo_background_img_loaded();
-            } else {
-                logo_background_img.addEventListener('load', logo_background_img_loaded);
-            }
-
-            setInterval(function() {
-                var delta = (Date.now() - animation_time_zero);
-                node_layer_rotation_degrees = (delta / NODE_LAYER_SLOWDOWN_FACTOR) % 360;
-                update_node_layer_rotation();
-            }, 10);
-
-            // d3.timer(function() {
-            //     var delta = (Date.now() - animation_time_zero);
-            //     node_layer_rotation_degrees = (delta / NODE_LAYER_SLOWDOWN_FACTOR) % 360;
-            //     update_node_layer_rotation();
-            //     //return (delta > 10000);
-            //     return false;
-            // });
 
         </script>
     </body>
