--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                 <div id="wordmark_container"></div>
             </div>
             <div id="content" style="opacity:0;">
+                <div id="animation_settings">
+                    <form class='settings_form'>
+                        <label>Animation type: </label>
+                        <select id="animation_type_select">
+                            <option value="random_nodes" selected="true">Random nodes</option>
+                            <option value="wipe_off_right">Wipe off (rightward)</option>
+                        </select>
+                    </form>
+                </div>
                 <div class="main">
                     <p>Developing revolutionary technologies to empower breakthrough science</p>
                     <p>Creating a new scientific environment that radically enables exceptionally talented individuals to do the best work of their lives</p>
@@ -73,13 +82,18 @@
             const NODE_ROW_SQUEEZE_FACTOR = 1.2;
             const NODE_COL_SQUEEZE_FACTOR = 0.3;
             const NODE_LAYERS_EASE_FN = "cubic";
-            const NODE_LAYERS_EASE_DURATION_MS = 1500;
+            const NODE_LAYERS_EASE_DURATION_MS = 2000;
             const NODE_LAYERS_FINAL_OPACITY = 1;
             const SVG_ASSET_ROOT = "assets/components/";
             const CONTENT_EASE_FN = "cubic";
             const CONTENT_EASE_DURATION_MS = 750;
             const CONTENT_FINAL_OPACITY = 1;
+            const CONTENT_TOP_PADDING = 20;
             const TIME_ZERO = Date.now();
+
+            var animation_type_select = document.getElementById("animation_type_select");
+            var animation_type_selection = animation_type_select.value;
+            var animation_timer_on_hold = false;
 
             var logo_background_img = document.getElementById('logo_background');
             var logo_background = { offset : null, width : 0, height : 0, centerX : 0, centerY : 0 };
@@ -88,7 +102,7 @@
             var node_layers_deque = new Deque();
             var node_layers_ids = [];
             var node_layers_animating = new Deque();
-            var node_layers_visible = false;
+            var node_layers_all_visible = false;
             var node_layer_margin = { top : 0, right : 0, bottom : 0, left : 0 };
             var node_layers = { max_height : 0, max_width : 0, rows : 0, cols : 0 };
             var node_layer_rotation_degrees = 0;
@@ -106,15 +120,19 @@
                 logo_background.centerY = logo_background.offset.top + logo_background.height / 2;
             };
 
-            var position_content = function() {
-                $('#content').css("padding-top", num_as_px(logo_background.height));
+            var position_content = function(cb) {
+                $('#content').css("padding-top", num_as_px(logo_background.height + CONTENT_TOP_PADDING));
                 if ($('#content').css("opacity") == 0) {
-                    d3.select('#content').transition().ease(CONTENT_EASE_FN).duration(CONTENT_EASE_DURATION_MS).style('opacity', CONTENT_FINAL_OPACITY);
+                    d3.select('#content').transition().ease(CONTENT_EASE_FN).duration(CONTENT_EASE_DURATION_MS).style('opacity', CONTENT_FINAL_OPACITY).each("end", function() { if (cb) cb(); });
                 }
             };
 
             var trigger_window_resize = function() {
                 window.dispatchEvent(new Event('resize'));
+            }
+
+            var trigger_animation_type_selection = function() {
+                animation_type_select.dispatchEvent(new Event('change'));
             }
 
             var logo_background_img_loaded = function() {
@@ -137,14 +155,14 @@
                 });
             };
 
-            var position_wordmark = function() {
+            var position_wordmark = function(cb) {
                 update_logo_background_state();
                 var wordmark = d3.select("#wordmark");
                 wordmark.style("width", num_as_px(logo_background.width / WORDMARK_SCALE))
                     .style("top", num_as_px(logo_background.centerY - parseInt($('#wordmark').height()) / 2 - parseInt($('#parent_container').css("margin-top"))))
                     .style("left", num_as_px(logo_background.centerX - parseInt($('#wordmark').width()) / 2))
                 if (wordmark.style("opacity") == 0) {
-                    wordmark.transition().ease(WORDMARK_EASE_FN).duration(WORDMARK_EASE_DURATION_MS).style('opacity', WORDMARK_FINAL_OPACITY);
+                    wordmark.transition().ease(WORDMARK_EASE_FN).duration(WORDMARK_EASE_DURATION_MS).style('opacity', WORDMARK_FINAL_OPACITY).each("end", function() { if (cb) cb(); });;
                 }
             };
 
@@ -215,8 +233,8 @@
                     node_layers_deque.push(node_layer_row);
                 }
                 d3.select('#node_layers_container').transition().ease(NODE_LAYERS_EASE_FN).duration(NODE_LAYERS_EASE_DURATION_MS).style('opacity', NODE_LAYERS_FINAL_OPACITY).each("end", function() { 
-                    node_layers_visible = true; 
-                    cb();
+                    node_layers_all_visible = true; 
+                    if (cb) cb();
                 });
             };
 
@@ -247,33 +265,53 @@
                 if (cb) cb();
             };
 
-            var animate_random_node_layers = function(n) {
-                if (node_layers_visible) {
-                    update_node_layers_state();
-                    for (var node_idx = 0; node_idx < n; node_idx++) {
-                        var random_node_layer_id = node_layers_ids[Math.floor(Math.random() * node_layers_ids.length)];
-                        node_layers_animating.push(random_node_layer_id);
-                    }
+            var reset_node_layers_animation_state = function() {
+                if (!node_layers_animating.isEmpty()) {
                     for (var row_idx = 0; row_idx < node_layers.rows; row_idx++) {
                         var node_layer_row = node_layers_deque.get(row_idx);
                         for (var col_idx = 0; col_idx < node_layers.cols; col_idx++) {
                             var node_layer_obj = node_layer_row[col_idx];
                             var layer_id = node_layer_obj['id'];
                             if (node_layers_animating.toArray().indexOf(layer_id) != -1) {
-                                node_layer_obj['static'] = false;
+                                node_layer_obj['static'] = true;
                                 d3.select("#" + layer_id)
                                     .selectAll('.node_layer_transform')
-                                    .attr("class", "node_layer_transform rotating")
-                                    .attr("initial_random_rotation", node_layer_obj['initial_random_rotation']);
+                                    .attr("class", "node_layer_transform")
+                                    .attr("initial_random_rotation", 0)
+                                    .attr("transform", null);
                             }
+                        }
+                    }
+                    node_layers_animating.clear();
+                }
+            };
+
+            var setup_animation_random_nodes = function(n) {
+                // generate new random nodes to rotate
+                for (var node_idx = 0; node_idx < n; node_idx++) {
+                    var random_node_layer_id = node_layers_ids[Math.floor(Math.random() * node_layers_ids.length)];
+                    node_layers_animating.push(random_node_layer_id);
+                }
+                // update rotation state
+                for (var row_idx = 0; row_idx < node_layers.rows; row_idx++) {
+                    var node_layer_row = node_layers_deque.get(row_idx);
+                    for (var col_idx = 0; col_idx < node_layers.cols; col_idx++) {
+                        var node_layer_obj = node_layer_row[col_idx];
+                        var layer_id = node_layer_obj['id'];
+                        if (node_layers_animating.toArray().indexOf(layer_id) != -1) {
+                            node_layer_obj['static'] = false;
+                            d3.select("#" + layer_id)
+                                .selectAll('.node_layer_transform')
+                                .attr("class", "node_layer_transform rotating")
+                                .attr("initial_random_rotation", node_layer_obj['initial_random_rotation']);
                         }
                     }
                 }
             };
 
-            var update_node_layer_rotation = function() {
-                if (node_layers_visible) {
-                    var rotating_node_layers = d3.selectAll('.node_layer_transform.rotating').attr("transform", function(d) { return "rotate(" + node_layer_rotation_degrees + ",114,110)"; });
+            var update_animation_random_nodes = function() {
+                if (node_layers_all_visible) {
+                    var rotating_node_layers = d3.selectAll('.node_layer_transform.rotating').attr("transform", function(d) { return "rotate(" + node_layer_rotation_degrees + ",113,110)"; });
                 }
             };
 
@@ -292,7 +330,7 @@
                 });
                 load_node_layers(function() { 
                     trigger_window_resize();
-                    init_node_layers( function() { animate_random_node_layers(25); } );
+                    init_node_layers(function() { trigger_animation_type_selection(); });
                 });
                 if (logo_background_img.complete) {
                     logo_background_img_loaded();
@@ -302,9 +340,13 @@
                 d3.timer(function() {
                     var delta = (Date.now() - TIME_ZERO);
                     node_layer_rotation_degrees = (delta / NODE_LAYER_SLOWDOWN_FACTOR) % 360;
-                    update_node_layer_rotation();
-                    //return (delta > 10000);
-                    return false;
+                    if (animation_type_selection == "random_nodes") {
+                        update_animation_random_nodes();
+                    }
+                    else if (animation_type_selection == "wipe_off_right") {
+
+                    }
+                    return animation_timer_on_hold;
                 });
             });
 
@@ -317,6 +359,23 @@
                     position_node_layers();
                 }, 200);
             });
+
+            animation_type_select.addEventListener("change", function() {
+                animation_type_selection = animation_type_select.value;
+                if (animation_type_selection == "random_nodes") {
+                    if (node_layers_all_visible) {
+                        update_node_layers_state();
+                        reset_node_layers_animation_state();
+                        setup_animation_random_nodes(25);
+                    }
+                }
+                else if (animation_type_selection == "wipe_off_right") {
+                    if (node_layers_all_visible) {
+                        update_node_layers_state();
+                        reset_node_layers_animation_state();
+                    }
+                }
+            }, false);
 
         </script>
     </body>
